Complete Zulip JSON response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 hyper = { version = "0.14.27", features = ["full"]}
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.107" }
+time = { version = "0.3.29", features = ["serde", "serde-well-known"] }
 tokio = { version = "1.32.0", features = ["full"] }
