--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.107" }
 time = { version = "0.3.29", features = ["serde", "serde-well-known"] }
 tokio = { version = "1.32.0", features = ["full"] }
+log = { version =  "0.4" }
+pretty_env_logger = { version = "0.4"}
