--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ time = { version = "0.3.29", features = ["serde", "serde-well-known"] }
 tokio = { version = "1.32.0", features = ["full"] }
 log = { version =  "0.4" }
 pretty_env_logger = { version = "0.4"}
+emojic = "0.4.1"
+dotenv = "0.15.0"
+hyper-tls = "0.5.0"
