--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@
 # SERVER CONFIGURATION
 # --------------------------------
 
+# Example: 127.0.0.1
+SERVER_DOMAIN=
+
 # Example: 9090
 SERVER_PORT=
 
