--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "0.14.27", features = ["full"]}
+hyper = { version = "0.14.27", features = ["full"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.107" }
-time = { version = "0.3.29", features = ["serde", "serde-well-known"] }
+time = { version = "0.3.29", features = [
+  "serde",
+  "serde-well-known",
+  "macros",
+] }
 tokio = { version = "1.32.0", features = ["full"] }
-log = { version =  "0.4" }
-pretty_env_logger = { version = "0.4"}
-emojic = "0.4.1"
+log = { version = "0.4" }
+pretty_env_logger = { version = "0.4" }
 dotenv = "0.15.0"
 hyper-tls = "0.5.0"
 url = "2.4.1"
 regex = "1.10.2"
+emojic = "0.4.1"
+once_cell = "1.18.0"
+data-encoding = "2.4.0"
+
+[dev-dependencies]
+test-case = "3.2.1"
