--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ SERVER_PORT=
 # ZULIP
 # --------------------------------
 
+
+# This is comma separated list of Zulip User IDs
+# User feedback it sent to these accounts
+ZULIP_BOT_MAINTAINERS=
+
 # Example: https://recurse.zulipchat.com
 ZULIP_SITE=
 
