--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = { version = "1.0.107" }
 time = { version = "0.3.29", features = [
   "serde",
   "serde-well-known",
+  "formatting",
   "macros",
 ] }
 tokio = { version = "1.32.0", features = ["full"] }
