--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,10 @@ RC_APP_SECRET=
 
 # Example: 16938
 RC_BOT_ID=
+
+
+# Bot's home position (X coordinate)
+RC_BOT_HOME_X=
+
+# Bot's home position (Y coordinate)
+RC_BOT_HOME_Y=
